--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,32 @@
 <resources>
     <string name="app_name">Reflect</string>
+    <string name="title_activity_main2">MainActivity2</string>
     <string name="title_home">Home</string>
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
+    <string name="title_activity_login">LoginActivity</string>
+    <string name="prompt_username">Username</string>
+    <string name="prompt_password">Password</string>
+    <string name="action_sign_in">Sign in or register</string>
+    <string name="action_sign_in_short">Sign in</string>
+    <string name="welcome">"Welcome !"</string>
+    <string name="invalid_username">Not a valid username</string>
+    <string name="invalid_password">Password must be >5 characters</string>
+    <string name="login_failed">"Login failed"</string>
+    <string name="What_Defines_You">What Defines You</string>
+    <string-array name="dropdown_items">
+        <item>What Defines You</item>
+        <item>Student</item>
+        <item>Professional Working Class</item>
+        <item>Retired</item>
+    </string-array>
+    <string name="Gender">Gender</string>
+    <string-array name="Gender_items">
+        <item>Gender</item>
+        <item>Male</item>
+        <item>Female</item>
+        <item>Prefer not to say</item>
+    </string-array>
+    <string name="prompt_email">Email</string>
+
 </resources>
